agrego un tittle

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         Ea quam, eligendi ad ipsa, sequi illo, doloribus dolorem quae veniam earum eum veritatis consequatur accusamus asperiores! Voluptatem eligendi corrupti voluptate aliquid! Labore possimus cum placeat sunt excepturi eos ad.</p>
     </section>
     <!-- Fin section -->
+    <title>home</title>
 
     <section id="trabajos">
         <p>tengo miedo</p>
